--- a/src/main/webapp/loadingpage.css
+++ b/src/main/webapp/loadingpage.css
@@ -95,6 +95,27 @@
 #login:hover {
 	background-color: #EEEEEE;
 }
+#logout {
+	color:black;
+	background-color:#DADADA;
+	border-radius: 3px;
+	height: 25px;
+	width: 60px;
+	position: absolute;
+	top: 12px;
+	left: 920px;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 12px;
+	padding-left: 19px;
+	padding-top: 7px;
+	box-shadow: 0px 0px 2px #222222;
+	z-index: 3;
+	transition: 0.2s ease;
+}
+
+#logout:hover {
+	background-color: #EEEEEE;
+}
 
 #signinbox {
 	position: fixed;
