--- a/src/main/webapp/stylesheets/NewPost.css
+++ b/src/main/webapp/stylesheets/NewPost.css
@@ -177,6 +177,43 @@
 }
 
 
+#greeting {
+	position: absolute;
+	top: 200px;
+	left: 200px;
+	height: 100px;
+	width: 400px;
+	z-indes: 3;
+	color: white;
+}
+
+a:visited {
+    color: white;
+}
+
+
+#nomessages {
+	position: absolute;
+	top: 300px;
+	left: 200px;
+	z-index: 3;
+	color: white	
+}
+
+#newposttext {
+	position: absolute;
+	top: 400px;
+	left: 200px;
+	z-index: 3;
+}
+
+#postbutton {
+	position: absolute;
+	top: 500px;
+	left: 200px;
+	z-index: 3;
+}
+
 
 
 
