--- a/src/main/webapp/stylesheets/NewPost.css
+++ b/src/main/webapp/stylesheets/NewPost.css
@@ -156,34 +156,22 @@
 	
 }
 
-#ntitle {
-
+#post {
 	position: absolute;
 	top: 100px;
 	left: 100px;
-	height: 100px;
-	width: 300px;
-
-}
-
-#nbody {
-	
-	position: absolute;
-	top: 100px;
-	left: 100px;
-	height: 100px;
-	width: 300px;
+	z-index: 3;
+	color: white;
 	
 }
-
 
 #greeting {
 	position: absolute;
-	top: 200px;
-	left: 200px;
+	top: 100px;
+	left: 100px;
 	height: 100px;
 	width: 400px;
-	z-indes: 3;
+	z-index: 3;
 	color: white;
 }
 
@@ -194,23 +182,31 @@ a:visited {
 
 #nomessages {
 	position: absolute;
-	top: 300px;
-	left: 200px;
+	top: 100px;
+	left: 100px;
 	z-index: 3;
 	color: white	
 }
 
+#newposttitle {
+	position: absolute;
+	top: 150px;
+	left: 100px;
+	z-index: 3;
+	
+}
+
 #newposttext {
 	position: absolute;
-	top: 400px;
-	left: 200px;
+	top: 200px;
+	left: 100px;
 	z-index: 3;
 }
 
 #postbutton {
 	position: absolute;
-	top: 500px;
-	left: 200px;
+	top: 275px;
+	left: 100px;
 	z-index: 3;
 }
 
