--- a/src/main/webapp/stylesheets/loadingpage.css
+++ b/src/main/webapp/stylesheets/loadingpage.css
@@ -232,6 +232,25 @@
 	font-size: 14px;
 }
 
+div.titlebox {
+    position: absolute;
+    top: 200px;
+    left: 940px;
+    width: 200px;
+    height: 100px;
+    border: 3px solid #73AD21;
+	z-index: 3;
+}
+
+#titles {
+	position: relative;
+    width: 100px;
+    height: 60px;
+    border: 3px solid #73AD21;
+    top: 10px;
+    z-index: 3;
+}
+
 
 
 
