--- a/src/main/webapp/stylesheets/loadingpage.css
+++ b/src/main/webapp/stylesheets/loadingpage.css
@@ -232,23 +232,23 @@
 	font-size: 14px;
 }
 
-div.titlebox {
-    position: absolute;
-    top: 200px;
-    left: 940px;
-    width: 200px;
-    height: 100px;
-    border: 3px solid #73AD21;
-	z-index: 3;
+div.blogposts {
+	positioin: relative;
+	width: 500px;
+	height: 100px;
+	top: 10px;
+	left: 100px;
+	border: 3px solid #73AD21;
+	z-index: 2;
 }
 
 div.titles {
 	position: relative;
     width: 100px;
-    height: 25px;
+    height: 18px;
     top: 200px;
     left: 900px;
-    z-index: 3;
+    z-index: 2;
 }
 
 
