--- a/src/main/webapp/stylesheets/NewPost.css
+++ b/src/main/webapp/stylesheets/NewPost.css
@@ -4,18 +4,18 @@
 	height: 1000px;
 	left: 0px;
 	top: 0px;
-	background: linear-gradient(#000000, white);
+	background: linear-gradient(black, black);
 	z-index: -1;
 }
 
 #wallpaper2 {
 	position: absolute;
 	width: 1280px;
-	height: 1000px;
+	height: 10000px;
 	left: 0px;
 	top: 700px;
 	z-index: -2;
-	background-color: white;
+	background-color: black;
 }
 
 #navbar {
