--- a/src/main/webapp/stylesheets/loadingpage.css
+++ b/src/main/webapp/stylesheets/loadingpage.css
@@ -4,7 +4,7 @@
 	height: 1000px;
 	left: 0px;
 	top: 0px;
-	background: linear-gradient(white, white);
+	background: linear-gradient(black, black);
 	z-index: -1;
 }
 
@@ -15,7 +15,7 @@
 	left: 0px;
 	top: 700px;
 	z-index: -2;
-	background-color: white;
+	background-color: black;
 }
 
 #navbar {
@@ -240,7 +240,7 @@ div.blogposts {
 	height: 25px;
 	top: 430px;
 	left: 100px;
-	color: black;
+	color: white;
 	z-index: 2;
 }
 
@@ -250,7 +250,7 @@ div.titles {
     height: 18px;
     top: 200px;
     left: 900px;
-    color: black;
+    color: white;
     z-index: 2;
 }
 
