--- a/src/main/webapp/stylesheets/Subscribe.css
+++ b/src/main/webapp/stylesheets/Subscribe.css
@@ -73,7 +73,6 @@
 #newpost:hover {
 	background-color: #999999;	
 }
-
 #subscribe {
 	color:black;
 	background-color:#DADADA;
@@ -85,7 +84,8 @@
 	left: 920px;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 12px;
-	padding-left: 19px;
+	padding-left: 10px;
+	padding-right: 10px;
 	padding-top: 7px;
 	box-shadow: 0px 0px 2px #222222;
 	z-index: 3;
@@ -103,10 +103,11 @@
 	width: 60px;
 	position: absolute;
 	top: 12px;
-	left: 1000px;
+	left: 1010px;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 12px;
-	padding-left: 19px;
+	padding-left: 10px;
+	padding-right: 30px;
 	padding-top: 7px;
 	box-shadow: 0px 0px 2px #222222;
 	z-index: 3;
