--- a/src/main/webapp/stylesheets/loadingpage.css
+++ b/src/main/webapp/stylesheets/loadingpage.css
@@ -234,6 +234,14 @@
 	font-size: 14px;
 }
 
+#aboutustext {
+	position: absolute;
+	top: 100px;
+	left: 50px;
+	color: white;
+	font-size: 20px;
+}
+
 div.blogposts {
 	position: relative;
 	width: 500px;
